# wiki

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  404.html  CLAUDE.md  README.md  TODO.md  build.py  build_config.yaml  deploy.py  deploy_config.yml  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  justfile  main.py  mkdocs.yml  pyproject.toml  requirements-vercel.txt  requirements.txt  rss.xml  sitemap.xml
.cursor/rules/: learning-agent.mdc
.github/: FUNDING.yml
.github/workflows/: ci.yml
assets/javascripts/: home.js  links.js  mathjax.f7c1a8.min.js  sakana-widget.js  scroll-effects.js
assets/stylesheets/: admonitions.css  feature.4dbef1.min.css  home.css  scroll-effects.css  temp-patch.2b76cd.min.css  temp-patch.f6a835.min.css  theme.42bb90.min.css
blog/: index.html
credits/: index.html
css/: graph.css
docs/: .nav.yml  credits.md  index.md  todo.md
draft/: gpt.md  grok.md  todo.md
graph/: graph.json
js/: graph.js
notes/: index.html
obsidian/: index.html
overrides/: home.html  projects.html
projects/: index.html
scripts/: blog.sh  clean-assets.sh  deploy.py  fmt_nav.py  mv_image.py  recent_notes.py  snyc_py_env.py  update.py  vercel-build.sh  vercel-install.sh
search/: search_index.json
src/: recent_notes.py
templates/: blog.md  ipynb-image-container.html  note.md  text-center-container.html  video-container.html
tests/: test_mv_image.py
todo/: index.html
trash/: ForyoClassifierCNN.md  gpu-researching.md  learning-agent.mdc  migrate_assets.py  recent_notes.py
(+1141 files in other folders)
