[project]
name = "ProjectDocs"
version = "0.1.0"
description = "The documentations of the projects practicing which use for improve my CS self learning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "colorlog>=6.9.0",
    "pyyaml>=6.0",
    "pymdown-extensions>=10.15",
    "mkdocs-material>=9.6.4",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.0",
    "mkdocs-rss-plugin>=1.17.4",
    "mkdocs-awesome-nav>=3.2.0",
    "mkdocs-note==2.1.4",
    "jupyter>=1.1.1",
    "numpy>=2.3.4",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "click==8.2.1",
    "mkdocs-network-graph-plugin>=1.0.3",
]
